--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>
         すみぺいんと
     </title>
-    <link href="./css/app.css" rel="stylesheet"/>
+    <link href="./css/app.css?20181025" rel="stylesheet"/>
 
     <meta name="viewport" content="width=900">
     <link href="./css/font-awesome.min.css" rel="stylesheet"/>
@@ -22,7 +22,7 @@
             crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@2.4.2/dist/vue.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"></script>
-    <script src="./js/paint.js"></script>
+    <script src="./js/paint.js?20181025"></script>
 
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-78499026-5"></script>
