--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                                 <a class="nav-link dropdown-toggle" href="#" id="dropdownMenu"
                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">操作</a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                    <a class="dropdown-item" data-set-canvas-size-default>キャンバスサイズ変更(デフォルト)</a>
+                                    <a class="dropdown-item" data-set-canvas-size-default>キャンバスサイズ変更(横長・背景なし)</a>
+                                    <a class="dropdown-item" data-set-canvas-size-horizontal-background>キャンバスサイズ変更(横長・背景あり)</a>
                                     <a class="dropdown-item" data-set-canvas-size-vertical>キャンバスサイズ変更(縦長)</a>
                                     <a class="dropdown-item" data-all-clear>全消し</a>
                                 </div>
